# vita-save-keeper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
cmake/: vita-toolchain-check.cmake
docs/: google-drive-setup.md  save-slot-format.md
sce_sys/livearea/contents/: template.xml
src/core/: AppSettings.cpp  AppSettings.hpp  BackupArchive.cpp  BackupArchive.hpp  BackupList.cpp  BackupList.hpp  BackupName.cpp  BackupName.hpp  BackupStore.cpp  BackupStore.hpp  CalendarUtil.hpp  GoogleAuth.cpp  GoogleAuth.hpp  GoogleConfig.cpp  GoogleConfig.hpp  GoogleDrive.cpp  GoogleDrive.hpp  GridWindow.cpp  GridWindow.hpp  InputGesture.hpp  MultipartUpload.cpp  MultipartUpload.hpp  PathUtil.cpp  PathUtil.hpp  SaveCategory.cpp  SaveCategory.hpp  SaveRecord.hpp  SaveScanner.cpp  SaveScanner.hpp  SaveSlotMetadata.cpp  SaveSlotMetadata.hpp  SaveTimeCache.cpp  SaveTimeCache.hpp  Selection.cpp  Selection.hpp  SfoParser.cpp  SfoParser.hpp  SyncPlan.cpp  SyncPlan.hpp  TextUtil.cpp  (+1 more)
src/vita/: App.cpp  App.hpp  SaveAppDbMetadata.cpp  SaveAppDbMetadata.hpp  main.cpp
src/vita/mount/kernel/: CMakeLists.txt  exports.yml  main.c  mount_bridge.h
src/vita/mount/user/: CMakeLists.txt  exports.yml  main.c  save_data_mount.h
src/vita/net/: HttpClient.cpp  HttpClient.hpp
src/vita/ui/: Ui.cpp  Ui.hpp
tests/: test_core.cpp
